--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ quickcheck = { version = "0.8", default-features = false }
 rand = "0.6"
 
 [features]
-default = ["std"]
+default = []
 std = []
 
 # This feature is no longer used and is DEPRECATED. This crate now
